--- a/SuicaPasmoReader/src/main/res/values/strings.xml
+++ b/SuicaPasmoReader/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="hint_label">16バイト以内で入力</string>
     <string name="history_label">利用履歴</string>
     <string name="inout_label">入退場履歴</string>
+    <string name="action_refresh">refresh</string>
 
 </resources>
